5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1668_1399.log
== TEST (2019-04-15 18:11:44) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//100)
else
	
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:11:51) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	
	
-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:12) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont(qva*(100//100))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cont(qva*(100//100))
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:29) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cont(qva*(100//100))
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:16:36) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
   print(msg,round(cont, 2))
	
-- ERROR:
File "XXXX", line 10
    print(msg,round(cont, 2))
                            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:16:57) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))

	
-- ERROR:
File "XXXX", line 10
    print(msg,round(cont, 2))
                            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:17:15) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
print("a")
	
-- OUTPUT:
a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:17:47) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
   print(msg)
	
-- ERROR:
File "XXXX", line 10
    print(msg)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:18:06) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
print(msg)
-- OUTPUT:
Ambrosio Rutra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:18:42) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
print(msg,round(cont, 2) )
-- OUTPUT:
Ambrosio Rutra 54540000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:14) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
54540000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:20:14) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100//100))
print(msg)
print(round(float(cont, 2))
-- ERROR:
File "XXXX", line 12
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:26) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100/100))
print(msg)
print(round((cont, 2))
-- ERROR:
File "XXXX", line 12
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:31) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100/100))
print(msg)
print(round((cont, 2))
-- ERROR:
File "XXXX", line 12
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:52) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(100/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(100/100))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
54540000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:12) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(10/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(10/100))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:22:23) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(10/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(10/100))
print(msg)
print(round(cont, 2))
-- EXECUTION TIME:
0.180393
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454000.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecra
2222546.9
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecra
800.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:23:11) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(10/100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(10/100))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:16) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//100)
else:
	msg=("Demelza Olecra")
	cont=(qvd//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
545400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:41) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*(1//100))
else:
	msg=("Demelza Olecra")
	cont=(qvd*(1//100))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:00) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//100)
else:
	msg=("Demelza Olecra")
	cont=(qvd//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
545400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:53) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//(qva+qvd))
else:
	msg=("Demelza Olecra")
	cont=(qvd//(qva+qvd))
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:19) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//100)
else:
	msg=("Demelza Olecram")
	cont=(qvd//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
545400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:48) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva//100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*100//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
545400
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:08) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10//100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*100//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:44:34) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10//100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*10//100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:13) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10/100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*10/100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:45:14) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10/100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*10/100)
print(msg)
print(round(cont, 2))
-- EXECUTION TIME:
0.116479
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454000.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222546.9
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
800.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:45:17) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10/100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*10/100)
print(msg)
print(round(cont, 2))
-- OUTPUT:
Ambrosio Rutra
5454000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:45:26) 
-- CODE:
from math import*
qva=int(input("qva:"))
qvd=int(input("qvd:"))
if(qva>qvd):
	msg=("Ambrosio Rutra")
	cont=(qva*10/100)
else:
	msg=("Demelza Olecram")
	cont=(qvd*10/100)
print(msg)
print(round(cont, 2))
-- EXECUTION TIME:
0.150025
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454000.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222546.9
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
800.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
